--- a/index.html
+++ b/index.html
@@ -399,8 +399,7 @@ img {
 
 
         <div class="widget-column footer-widget-1">
-          <small><a href="https://wordpress.org/" target="_blank" class="imprint">Template from WordPress</a>
-          </small>
+          <a href="https://wordpress.org/" target="_blank" class="imprint">Template from WordPress</a>
         </div>
 
       
