linked personal webpages, updated rights information, added conference link and location

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ img {
       <div class="site-branding">
         <div class="wrap">
           <h1 class="site-title"><a href="#INTRODUCTION" rel="home">CRDH:From Capture to Render of Digital Humans for AR/VR</a></h1>
-          <p class="site-description">December 9<sup>th</sup> @ 2nd IEEE AIVR Workshop
+          <p class="site-description">December 9-11 @ 2nd IEEE AIVR Conference
                                       2019 in San Diego, CA, USA</p>
         </div><!-- .wrap -->
       </div><!-- .site-branding -->
@@ -138,7 +138,9 @@ img {
           <ul id="top-menu" class="menu">
             <li id="homeitem" class="menu-item"><a href="#HOME">HOME</a></li>
             <li id="introductionitem" class="menu-item"><a href="#INTRODUCTION">INTRODUCTION</a></li>
+            <li id="locationsitem" class="menu-item"><a href="#LOCATION">LOCATION</a></li>
             <li id="papersitem" class="menu-item"><a href="#SUBMISSION">SUBMISSION</a></li>
+            <li id="rightsitem" class="menu-item"><a href="#RIGHTS">RIGHTS</a></li>
             <li id="workshopitem" class="menu-item"><a href="#WORKSHOPPROGRAM">PROGRAM</a></li>
             <li id="datesitem" class="menu-item"><a href="#IMPORTANTDATES">DATES</a></li>
             <!--
@@ -196,6 +198,24 @@ img {
           </div>
         </div>
       </div>
+      
+      <!-- Location -->
+      <div>
+        <div>
+          <h2 id="LOCATION" class="elementor-heading-title">
+            LOCATION</h2>
+        </div>
+        <div class="elementor-widget-text-editor">
+          <div class="elementor-text-editor">
+            The workshop will take place during the IEEE 2nd International Conference on Artificial Intelligence & Virtual Reality (AIVR 2019).
+            Check the <b><a
+              href="http://aivr.science.uu.nl/"
+              target="_blank">conference website</a></b> for relevant information 
+
+            <br><br>
+          </div>
+        </div>
+      </div>
 
       <!-- Call for Papers -->
       <div>
@@ -242,6 +262,24 @@ img {
       <br><br>
 	  
 	  
+	  <!-- Rights -->
+      <div>
+        <div>
+          <h2 id="RIGHTS="elementor-heading-title">RIGHTS</h2>
+        </div>
+        <div class="elementor-widget-text-editor">
+          <div class="elementor-text-editor">
+            The work submitted to the conference is subject to the <b><a
+              href="https://www.ieee.org/publications/rights/index.html"
+              target="_blank">IEEE Intellectual Property Rights</a></b> and  <b><a
+              href="https://www.ieee.org/publications/rights/copyright-policy.html"
+              target="_blank">Copyright policy</a></b>.
+            Please read carefully the linked webpages before submitting a contribution.
+            <br><br>
+          </div>
+        </div>
+      </div>
+      
 	  <!-- Important Dates -->
       <div>
         <div>
@@ -300,7 +338,7 @@ img {
               <td class="elementor-widget-image-box">
                 <div class="elementor-image-box-wrapper">
 
-                  <a href="http://aliensunmin.github.io/" target="_blank">
+                  <a href="https://www.yajie-zhao.com/" target="_blank">
                    <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px; max-width: 150px;border-radius: 50%;"
                            src="img/yajie.jpg" alt=""> 
@@ -318,7 +356,7 @@ img {
 			  <td class="elementor-widget-image-box">
                 <div class="elementor-image-box-wrapper">
 
-                  <a href="http://graduatestudents.ucmerced.edu/wlai24/" target="_blank">
+                  <a href="http://fdanieau.free.fr/" target="_blank">
                     <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px;max-width: 150px;border-radius: 50%;"
                            src="img/fabien_danieau.jpg" alt="">
@@ -336,7 +374,7 @@ img {
               <td class="elementor-widget-image-box">
                 <div class="elementor-image-box-wrapper">
 
-                  <a href="https://www.cs.utexas.edu/~ycsu/" target="_blank">
+                  <a href="https://stevetonneau.fr/" target="_blank">
                     <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px;max-width: 150px;border-radius: 50%;"
                            src="img/stevetonneau.png" alt="">
