--- a/index.html
+++ b/index.html
@@ -99,14 +99,6 @@ img {
   <!-- header -->
   <header id="header" class="site-header" role="banner">
 
-<!--    <div class="custom-header" style="margin-bottom: 72px; min-width:100%;">-->
-<!--      <h1 class="site-title">360° Perception and Interaction</h1>-->
-<!--      <p class="site-description">October 27<sup>th</sup> @ ICCV Workshop-->
-<!--                                      2019 in Seoul, Korea</p>-->
-<!--      <a href="#INTRODUCTION" rel="home">-->
-<!--        <img src="img/banner.gif" style="display: block">-->
-<!--      </a>-->
-<!--    </div>-->
     <div class="custom-header" style="margin-bottom: 72px;">
 
       <!-- Video -->
@@ -151,7 +143,7 @@ img {
               <a>INFO</a>
               <ul class="sub-menu">
                 <li id="speakersitem" class="menu-item"><a href="#INVITEDSPEAKERS">Invited Speakers</a></li>
-                <li id="committeeitem" class="menu-item"><a href="#ORGANIZINGCOMMITTEES">ORGANIZERS</a>
+                <li id="committeeitem" class="menu-item"><a href="#ORGANIZINGCOMMITTEES">Organizers</a>
                 </li>
                 <li id="contactitem" class="menu-item"><a href="#CONTACT">Contact Us</a></li>
               </ul>
