--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ img {
 
            <!-- All the papers should be submitted using CMT website: <a
               href="https://cmt3.research.microsoft.com/360PI2019/" target="_blank">https://cmt3.research.microsoft.com/360PI2019/</a>. -->
-            Please email your submissions to cdrh_workshop@gmx.com with [Workshop CRDH] in the subject line. In case of questions, you can also send an email to the workshop organizers (see below).
+            Please email your submissions to <b>cdrh_workshop@gmx.com</b> with [Workshop CRDH] in the subject line. In case of questions, you can also send an email to the workshop organizers (see below).
             <br><br>
 
 
@@ -408,7 +408,7 @@ img {
           <h2 id="CONTACT" class="elementor-heading-title">CONTACT US</h2>
         </div>
 		 <div class="elementor-widget-text-editor">
-           If you have any questions, please contact <b>Yajie Zhao</b>(zhao[at].ict.usc.edu), or <b>Fabien Danieau(fabien.danieau[at]interdigital.com)</b>
+           If you have any questions, please contact <b>Yajie Zhao</b>(zhao[at].ict.usc.edu), or <b>Fabien Danieau</b>(fabien.danieau[at]interdigital.com)
 		   or <b>Steve Tonneau</b>(stonneau[at]ed.ac.uk).
 		   <br><br>
        </div>
