--- a/index.html
+++ b/index.html
@@ -228,8 +228,9 @@ img {
 
            <!-- All the papers should be submitted using CMT website: <a
               href="https://cmt3.research.microsoft.com/360PI2019/" target="_blank">https://cmt3.research.microsoft.com/360PI2019/</a>. -->
-            Please email your submissions to <b>cdrh_workshop@gmx.com</b> with [Workshop CRDH] in the subject line. In case of questions, you can also send an email to the workshop organizers (see below).
-            <br><br>
+          <!--  Please email your submissions to <b>cdrh_workshop@gmx.com</b> with [Workshop CRDH] in the subject line. In case of questions, you can also send an email to the workshop organizers (see below). -->
+            <b>Submission site will be open soon. </b>
+		  <br><br>
 
 
             The topic should includes but not limited to:
