--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ img {
 
       <div class="site-branding">
         <div class="wrap">
-          <h1 class="site-title"><a href="#INTRODUCTION" rel="home">CRDH:From Capture to Rendering of Digital Humans for AR/VR</a></h1>
+          <h1 class="site-title"><a href="#INTRODUCTION" rel="home">CRDH:From Capture to Render of Digital Humans for AR/VR</a></h1>
           <p class="site-description">December 9-11 @ 2nd IEEE AIVR Conference
                                       2019 in San Diego, CA, USA</p>
         </div><!-- .wrap -->
