add submission link

--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@ img {
            <!-- All the papers should be submitted using CMT website: <a
               href="https://cmt3.research.microsoft.com/360PI2019/" target="_blank">https://cmt3.research.microsoft.com/360PI2019/</a>. -->
           <!--  Please email your submissions to <b>cdrh_workshop@gmx.com</b> with [Workshop CRDH] in the subject line. In case of questions, you can also send an email to the workshop organizers (see below). -->
-            <b>Submission site will be open soon. </b>
+            <b>All the papers should be submitted using websit: <a
+              href="https://easychair.org/my/conference?conf=ieeeaivr2019" target="_blank">https://easychair.org/my/conference?conf=ieeeaivr2019</a>. </b>
 		  <br><br>
 
 
