--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ img {
               href="https://cmt3.research.microsoft.com/360PI2019/" target="_blank">https://cmt3.research.microsoft.com/360PI2019/</a>. -->
           <!--  Please email your submissions to <b>cdrh_workshop@gmx.com</b> with [Workshop CRDH] in the subject line. In case of questions, you can also send an email to the workshop organizers (see below). -->
             <b>All the papers should be submitted using <u><a 
-              href="https://easychair.org/my/conference?conf=ieeeaivr2019" target="_blank">EasyChair website</a></u> under the track of <i>"IEEE AIVR 2019 - Workshop on From Capture to Render of Digital Humans for AR/VR".</i></b>
+              href="https://easychair.org/my/conference?conf=ieeeaivr2019" target="_blank">EasyChair website</a></u> under the track of <i>"IEEE AIVR 2019 - Workshop on From Capture to Rendering of Digital Humans for AR/VR".</i></b>
 		  <br><br>
 
 
