--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ img {
           <ul id="top-menu" class="menu">
             <li id="homeitem" class="menu-item"><a href="#HOME">HOME</a></li>
             <li id="introductionitem" class="menu-item"><a href="#INTRODUCTION">INTRODUCTION</a></li>
+            <li id="newsitem" class="menu-item"><a href="#NEWS">NEWS</a></li>
             <li id="locationsitem" class="menu-item"><a href="#LOCATION">LOCATION</a></li>
             <li id="papersitem" class="menu-item"><a href="#SUBMISSION">SUBMISSION</a></li>
             <li id="rightsitem" class="menu-item"><a href="#RIGHTS">RIGHTS</a></li>
@@ -185,6 +186,22 @@ img {
             bring researchers thater collaboration. It will also provide a good
             introduction for researchers that are interested and want to start their
             research in the field.
+
+            <br><br>
+          </div>
+        </div>
+      </div>
+      
+      <!-- NEWS -->
+      <div>
+        <div>
+          <h2 id="NEWS" class="elementor-heading-title">
+            NEWS</h2>
+        </div>
+        <div class="elementor-widget-text-editor">
+          <div class="elementor-text-editor">
+            <b><a href="http://ict.usc.edu/profile/ari-shapiro/"
+              target="_blank">Ari Shapiro</a></b> will give a keynote during the workshop!
 
             <br><br>
           </div>
