--- a/index.html
+++ b/index.html
@@ -334,17 +334,17 @@ img {
 		   <br><br>
              <div style="margin: 0 50px">
               <ul>
-                <li>14:00 - 15:45 Session 4B</li>
+              14:00 - 15:45 Session 4B
                 <li>14:00 - 14:10 Introduction</li>
                 <li>14:10 - 14:55 Keynote Speaker(Ari Shapiro)</li>
                 <li>14:55 - 15:20 Invited Papers</li>
-                <li>15:20 - 15:45 Invited Talk:Fabien Danieau/li>
+                <li>15:20 - 15:45 Invited Talk:Fabien Danieau</li>
                 <li>15:45 - 16:15 Coffee Break</li>
                 <li>16:15 - 16:45 Invited Talk:Chloe Legendre</li>
                 <li>16:45 - 17:00 Invited Paper</li>
                 <li>17:00 - 17:15 Invited Paper</li>
-                <li>17:15 - 17:30 Invited Talk:Kalle Bladin/li>
-                <li>17:30 - 18:00 Wrap up/li>
+                <li>17:15 - 17:30 Invited Talk:Kalle Bladin</li>
+                <li>17:30 - 18:00 Wrap up</li>
       
               </ul>
             </div>
