--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ img {
 		   <br><br>
              <div style="margin: 0 50px">
               <ul>
-              14:00 - 15:45 Session 4B
+               <li>14:00 - 15:45 Session 4B/li>
                 <li>14:00 - 14:10 Introduction</li>
                 <li>14:10 - 14:55 Keynote Speaker(Ari Shapiro)</li>
                 <li>14:55 - 15:20 Invited Papers</li>
