--- a/index.html
+++ b/index.html
@@ -338,12 +338,14 @@ img {
               <ul>
               
                 <li>14:00 - 14:10 Introduction</li>
-                <li>14:10 - 14:55 Keynote Speaker(Ari Shapiro)</li>
+                <li>14:10 - 14:55 Keynote Speaker:Ari Shapiro</li>
                 <li>14:55 - 15:20 Invited Papers</li>
                 <li>15:20 - 15:45 Invited Talk:Fabien Danieau</li> 
 	      </ul>
             </div>					
         <b>15:45 - 16:15 Coffee Break</b> 
+	
+					
           <b>16:15-18:00 Session 5B: Workshop CRHD (part 2)</b>       
 	<div style="margin: 0 50px">
               <ul>
