--- a/index.html
+++ b/index.html
@@ -339,19 +339,19 @@ img {
               
                 <li>14:00 - 14:10 Introduction</li>
                 <li>14:10 - 14:55 Keynote Speaker:Ari Shapiro</li>
-                <li>14:55 - 15:20 Invited Papers</li>
+                <li>14:55 - 15:20 Invited Paper:Temporal Interpolation of Dynamic Digital Humans(Irene Viola, Jelmer Mulder, Francesca De Simone and Pablo Cesar)</li>
                 <li>15:20 - 15:45 Invited Talk:Fabien Danieau</li> 
 	      </ul>
             </div>
 					
           <b>15:45 - 16:15 Coffee Break</b> 
-	  <br/>				
+	    <br/> <br/>
           <b>16:15-18:00 Session 5B: Workshop CRHD (part 2)</b>       
 	<div style="margin: 0 50px">
               <ul>
 		<li>16:15 - 16:45 Invited Talk:Chloe Legendre</li>
-                <li>16:45 - 17:00 Invited Paper</li>
-                <li>17:00 - 17:15 Invited Paper</li>
+                <li>16:45 - 17:00 Invited Paper:Influence of Motion Speed on the Perception of Latency in Avatar Control(Ludovic Hoyet, Clément Spies, Pierre Plantard, Anthony Sorel, Richard Kulpa and Franck Multon).</li>
+                <li>17:00 - 17:15 Invited Paper:The Design Process for Enhancing Visual Expressive Qualities of Characters from Performance Capture into Virtual Reality(Victoria Campbell)</li>
                 <li>17:15 - 17:30 Invited Talk:Kalle Bladin</li>
                 <li>17:30 - 18:00 Wrap up</li>
                </ul>
