--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@ img {
             <table class="tg">
               <tr>
                 <td>Paper submission deadline:</td>
-                <td><b>October 10<sup>th</sup>, 2019</b>
-                </td>
+                h2{<td><b>October 10<sup>th</sup>, 2019</b>
+                </td>}
               </tr>
               <tr>
                 <td>Notification of acceptance:</td>
