--- a/index.html
+++ b/index.html
@@ -302,21 +302,21 @@ img {
             <table class="tg">
               <tr>
                 <td>Paper submission deadline:</td>
-                <td><b><strike>October 10<sup>th</sup>, 2019</strike>:</b>
+                <td><b><strike>October 10<sup>th</sup>, 2019</strike></b>
                 </td>
               </tr>
               <tr>
                 <td>Notification of acceptance:</td>
-                <td><b>October 20<sup>th</sup>, 2019</b></td>
+                <td><b><strike>October 20<sup>th</sup>, 2019 </strike></b></td>
               </tr>
               <tr>
                 <td>Camera-ready Deadline:</td>
-                <td><b>October 28<sup>th</sup>, 2019</b></td>
+                <td><b><strike>October 28<sup>th</sup>, 2019</strike></b></td>
               </tr>
               <tr>
                 <td>Workshop date:</td>
-                <td><b>December 9<sup>th</sup>, 2019
-                </b></td>
+                <td><b><strike>December 9<sup>th</sup>, 2019
+                </strike></b></td>
               </tr>
             </table>
           </div>
