--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ img {
               
                 <li>14:00 - 14:10 Introduction</li>
                 <li>14:10 - 14:55 Keynote Speaker:Ari Shapiro</li>
-                <li>14:55 - 15:20 Invited Paper:Temporal Interpolation of Dynamic Digital Humans(Irene Viola, Jelmer Mulder, Francesca De Simone and Pablo Cesar)</li>
+                <li>14:55 - 15:20 Invited Paper:Temporal Interpolation of Dynamic Digital Humans(<b>Irene Viola, Jelmer Mulder, Francesca De Simone and Pablo Cesar</b>)</li>
                 <li>15:20 - 15:45 Invited Talk:Fabien Danieau</li> 
 	      </ul>
             </div>
