--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@ img {
             <table class="tg">
               <tr>
                 <td>Ari Shapiro</td>
-                <td>Website:<\br>
-	            Title:<\br>
-	            Abstract:<\br>
+                <td>Website:<br/>
+	            Title:<br/>
+	            Abstract:<br/>
                 </td>
               </tr>
               <tr>
