--- a/index.html
+++ b/index.html
@@ -372,8 +372,17 @@ img {
           <div style="text-align: center">
             <table class="tg">
               <tr>
-                <td>Ari Shapiro</td>
-                <td>Website:<br/>
+               <td class="elementor-widget-image-box">
+                <div class="elementor-image-box-wrapper">
+
+                  <a href="https://www.yajie-zhao.com/" target="_blank">
+                   <div class="elementor-image-box-img">
+                      <img style="margin: auto; height: 150px; max-width: 150px;border-radius: 50%;"
+                           src="img/yajie.jpg" alt=""> 
+					
+                 </div></td>
+                <td>Ari Shapiro<br/>
+		    Website:<br/>
 	            Title:<br/>
 	            Abstract:<br/>
                 </td>
