--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@ img {
               </tr>
               <tr>
                 <td>Workshop date:</td>
-                <td><b><strike>December 9<sup>th</sup>, 2019
-                </strike></b></td>
+                <td><b>December 9<sup>th</sup>, 2019
+               </b></td>
               </tr>
             </table>
           </div>
