--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ img {
         </div>
 
         <div class="elementor-widget-text-editor">
-          <div style="text-align: center">
+          <div style="text-align: left">
             <table class="tg">
               <tr>
                <td class="elementor-widget-image-box">
