--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@ img {
                            src="img/ariShapiro.jpg" alt=""> 
 					
                  </div></td>
-                <td>Ari Shapiro<br/>
-	            Title:Digital humans: models of behavior and interactivity<br/>
-	            Abstract:As techniques for capturing and generating realistic digital humans become more widely available, the need for realistic movement and behavior becomes more important. The Uncanny Valley effect is more pronounced for moving, as opposed to still, imagery, necessitating higher fidelity motion replication, such as from motion capture, as well as higher fidelity behavior models for synthetic movement. This talk explores my work in modeling both appearance and behavior of digital humans, including capture, rigging, and interactivity.<br/>
+                <td><b>Ari Shapiro</b><br/>
+							  <b>Title:</b>Digital humans: models of behavior and interactivity<br/>
+							  <b>Abstract:</b>As techniques for capturing and generating realistic digital humans become more widely available, the need for realistic movement and behavior becomes more important. The Uncanny Valley effect is more pronounced for moving, as opposed to still, imagery, necessitating higher fidelity motion replication, such as from motion capture, as well as higher fidelity behavior models for synthetic movement. This talk explores my work in modeling both appearance and behavior of digital humans, including capture, rigging, and interactivity.<br/>
                 </td>
               </tr>
               <tr>
