--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ img {
                   <a href="http://www.arishapiro.com/" target="_blank">
                    <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px; max-width: 150px;border-radius: 50%;"
-                           src="img/ariShapiro.jpg" alt=""> 
+                           src="img/ariShapiro2.jpg" alt=""> 
 					
                  </div></td>
                 <td><b>Ari Shapiro</b><br/>
