--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ img {
                   <a href="http://fdanieau.free.fr/" target="_blank">
                    <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px; max-width: 150px;border-radius: 50%;"
-                           src="img/chloe.png" alt=""> 
+                           src="img/fabien_danieau.jpg" alt=""> 
 					
                  </div></td>
                 <td><b>Fabien Danieau</b><br/>
