--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@ img {
 					
                  </div></td>
                 <td><b>Chloe LeGendre</b><br/>
-							  <b>Title:</b>TBD<br/>
-							  <b>Abstract:</b>TBD<br/>
+							  <b>Title:</b>Multispectral Illumination in USC ICT's Light Stage X<br/>
+							  <b>Abstract:</b>USC ICT's computational illumination system Light Stage X has been used for a variety of different techniques: from studio lighting reproduction to high resolution facial scanning. In this talk, I'll describe how adding multispectral LEDs to the system has improved color rendition for a variety of such Light Stage techniques, while also enabling higher resolution facial capture. I will conclude with opportunities for future work on human digitization leveraging multispectral illumination sources.<br/>
                 </td>
               </tr>
                    <tr>
