--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@ img {
 	<div style="margin: 0 50px">
               <ul>
 		<li>16:15 - 16:45 Invited Talk:Chloe Legendre</li>
-                <li>16:45 - 17:00 Invited Paper:Influence of Motion Speed on the Perception of Latency in Avatar Control(<b>Ludovic Hoyet, Clément Spies, Pierre Plantard, Anthony Sorel, Richard Kulpa and Franck Multon</b>).</li>
-                <li>17:00 - 17:15 Invited Paper:The Design Process for Enhancing Visual Expressive Qualities of Characters from Performance Capture into Virtual Reality(<b>Victoria Campbell</b>)</li>
+                <li>16:45 - 17:00 Paper:Influence of Motion Speed on the Perception of Latency in Avatar Control(<b>Ludovic Hoyet, Clément Spies, Pierre Plantard, Anthony Sorel, Richard Kulpa and Franck Multon</b>).</li>
+                <li>17:00 - 17:15 Paper:The Design Process for Enhancing Visual Expressive Qualities of Characters from Performance Capture into Virtual Reality(<b>Victoria Campbell</b>)</li>
                 <li>17:15 - 17:45 Invited Talk:Kalle Bladin</li>
                 <li>17:45 - 18:00 Wrap up</li>
                </ul>
