fix formatting issues

--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@ img {
            <!-- All the papers should be submitted using CMT website: <a
               href="https://cmt3.research.microsoft.com/360PI2019/" target="_blank">https://cmt3.research.microsoft.com/360PI2019/</a>. -->
           <!--  Please email your submissions to <b>cdrh_workshop@gmx.com</b> with [Workshop CRDH] in the subject line. In case of questions, you can also send an email to the workshop organizers (see below). -->
-            <b>All the papers should be submitted using <u><a 
-              href="https://easychair.org/my/conference?conf=ieeeaivr2019" target="_blank">EasyChair website</a></u> under the track of <i>"IEEE AIVR 2019 - Workshop on From Capture to Rendering of Digital Humans for AR/VR".</i></b>
+            <b>All the papers should be submitted using <u>EasyChair website<</u> under the track of <i>"IEEE AIVR 2020 - Workshop on From Capture to Rendering of Digital Humans for AR/VR" (online soon !).</i></b>
 		  <br><br>
 
 
@@ -323,7 +322,8 @@ img {
             WORKSHOP PROGRAM</h2>
         </div>
 		 <div class="elementor-widget-text-editor">
-		<b>TBD</b> The program of the previous edition can be found on the <a href="https://aivr2019.github.io/CRDH-workshop/">CRDH 2019 website</a>.
+		<b>TBD</b> <br /> The program of the previous edition can be found on the <a href="https://aivr2019.github.io/CRDH-workshop/">CRDH 2019 website</a>
+		<br />
           <!-- <b>Workshop Date: December 9, 2019</b>
 		   <br><br>
 							  
@@ -364,6 +364,7 @@ img {
 
         <div class="elementor-widget-text-editor">
 	<b>To be announced</b>
+	<br />
          <!-- <div style="text-align: left">
             <table class="tg">
               <tr>
