--- a/index.html
+++ b/index.html
@@ -294,16 +294,16 @@ img {
             <table class="tg">
               <tr>
                 <td>Paper submission deadline:</td>
-                <td><b><strike>September 1<sup>st</sup>, 2020</strike></b>
+                <td><b>September 1<sup>st</sup>, 2020</b>
                 </td>
               </tr>
               <tr>
                 <td>Notification of acceptance:</td>
-                <td><b><strike>October 1<sup>st</sup>, 2020 </strike></b></td>
+                <td><b>October 1<sup>st</sup>, 2020</b></td>
               </tr>
               <tr>
                 <td>Camera-ready Deadline:</td>
-                <td><b><strike>October 14<sup>th</sup>, 2020</strike></b></td>
+                <td><b>October 14<sup>th</sup>, 2020</b></td>
               </tr>
               <tr>
                 <td>Workshop date:</td>
