workshop dates updated

--- a/index.html
+++ b/index.html
@@ -294,16 +294,16 @@ img {
             <table class="tg">
               <tr>
                 <td>Paper submission deadline:</td>
-                <td><b>September 1<sup>st</sup>, 2020</b>
+                <td><b>September 4<sup>th</sup>, 2020</b>
                 </td>
               </tr>
               <tr>
                 <td>Notification of acceptance:</td>
-                <td><b>October 1<sup>st</sup>, 2020</b></td>
+                <td><b>October 11<sup>th</sup>, 2020</b></td>
               </tr>
               <tr>
                 <td>Camera-ready Deadline:</td>
-                <td><b>October 14<sup>th</sup>, 2020</b></td>
+                <td><b>October 30<sup>th</sup>, 2020</b></td>
               </tr>
               <tr>
                 <td>Workshop date:</td>
