fix typo in abstract

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <br><br>
             We expect that the workshop will inspire novel ideas based on current practices in the field of rendering realistic digital humans and accelerate the hardware and software development in the same field.
 			
-            A major goal of this workshop will be to bring researchers thater collaboration. It will also provide a good introduction for researchers that are interested and want to start their
+            A major goal of this workshop will be to bring researchers potential collaboration opportunities. It will also provide a good introduction for researchers that are interested and want to start their
             research in the field.
 
             <br><br>
