workshop dates updates. new: live event

--- a/index.html
+++ b/index.html
@@ -147,7 +147,11 @@
         </div>
         <div class="elementor-widget-text-editor">
           <div class="elementor-text-editor">
-            Website for the edition 2020 is online!
+            [07/08/2020] The workshop will be a <a href="https://aivr.science.uu.nl/aivr_message.html">live event</a>
+            <br><br>
+          </div>
+          <div class="elementor-text-editor">
+            [06/01/2020] Website for the edition 2020 is online!
             <br><br>
           </div>
         </div>
@@ -258,7 +262,7 @@
               </tr>
               <tr>
                 <td>Workshop date:</td>
-                <td><b>December 14<sup>th</sup>, 2020
+                <td><b>December 14<sup>th</sup> - 18<sup>th</sup>, 2020
                </b></td>
               </tr>
             </table>
