submission website added

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
         </div>
         <div class="elementor-widget-text-editor">
           <div class="elementor-text-editor">
+            [07/16/2020] <a href="https://easychair.org/my/conference?conf=ieeeaivr2020">Submission website</a> is opened
+            <br><br>
+          </div>
+          <div class="elementor-text-editor">
             [07/08/2020] The workshop will be a <a href="https://aivr.science.uu.nl/aivr_message.html">live event</a>
             <br><br>
           </div>
@@ -191,10 +195,7 @@
 
             <br><br>
 
-           <!-- All the papers should be submitted using CMT website: <a
-              href="https://cmt3.research.microsoft.com/360PI2019/" target="_blank">https://cmt3.research.microsoft.com/360PI2019/</a>. -->
-          <!--  Please email your submissions to <b>cdrh_workshop@gmx.com</b> with [Workshop CRDH] in the subject line. In case of questions, you can also send an email to the workshop organizers (see below). -->
-            <b>All the papers should be submitted using <u>EasyChair website</u> under the track of <i>"IEEE AIVR 2020 - Workshop on From Capture to Rendering of Digital Humans for AR/VR" (online soon !).</i></b>
+            <b>All the papers should be submitted using <a href="https://easychair.org/my/conference?conf=ieeeaivr2020"><u>EasyChair website</u> under the track of <i>"IEEE AIVR 2020 - Workshop on From Capture to Rendering of Digital Humans for AR/VR"</a></i></b>
 		  <br><br>
 
 
