update dates in title update location (virtual event)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="site-branding">
         <div class="wrap">
           <h1 class="site-title"><a href="#INTRODUCTION" rel="home">CRDH : From Capture to Rendering of Digital Humans for AR/VR</a></h1>
-          <p class="site-description">December 14-16 @ 3rd IEEE International Conference on AIVR 2020 in Utrecht, The Netherlands.</p>
+          <p class="site-description">December 14-18 @ 3rd IEEE International Conference on AIVR 2020 in Utrecht, The Netherlands.</p>
         </div><!-- .wrap -->
       </div><!-- .site-branding -->
 
@@ -169,8 +169,7 @@
         </div>
         <div class="elementor-widget-text-editor">
           <div class="elementor-text-editor">
-            The workshop will take place during the IEEE 3rd International Conference on Artificial Intelligence & Virtual Reality (AIVR 2020).
-            Check the <b><a
+            The workshop will take place during the IEEE 3rd International Conference on Artificial Intelligence & Virtual Reality (AIVR 2020). Due to the COVID-19 situation, the conference and the workshop will be held fully online. Check the <b><a
               href="http://aivr.science.uu.nl/" target="_blank">conference website</a></b> for relevant information 
 
             <br><br>
