fix typos (Steve)

--- a/index.html
+++ b/index.html
@@ -123,16 +123,10 @@
         </div>
         <div class="elementor-widget-text-editor">
           <div class="elementor-text-editor">
-            Realistic representation of digital humans in AR/VR applications is only made possible with the capture of high-quality data and appropriate rendering techniques. 
-	   While capturing of accurate and relightable data is required to produce assets for realistic avatars, we also need real-time performance capture to ensure success of applications like teleconference and teleportation.
-	   On the other side, rendering of photo-real humans is even more important to the immersive experience in virtual scenes. This workshop provides a platform to share some of the most advanced human face/body capturing systems from pore-level high resolution capture to rapid motion capture along with the art of data processing. 
-	   It will also cover novel rendering along with environment lighting estimation techniques required in AR/VR, like neural rendering.
+Realistic representation of digital humans in AR/VR applications is only made possible with the capture of high-quality data and appropriate rendering techniques. While capturing of accurate and relightable data is required to produce assets for realistic avatars, we also need real-time performance capture to ensure success of applications like teleconference and teleportation. On the other hand, rendering of photo-real humans is even more important to the immersive experience in virtual scenes. This workshop provides a platform to share some of the most advanced human face/body capturing systems from pore-level high resolution capture to rapid motion capture along with the art of data processing. It will also cover novel rendering along with environment lighting estimation techniques required in AR/VR, like neural rendering.
 			
             <br><br>
-            We expect that the workshop will inspire novel ideas based on current practices in the field of rendering realistic digital humans and accelerate the hardware and software development in the same field.
-			
-            A major goal of this workshop will be to bring researchers potential collaboration opportunities. It will also provide a good introduction for researchers that are interested and want to start their
-            research in the field.
+After a successful first edition, we are excited to present a second edition of the workshop. We expect that this event will inspire novel ideas based on current practices in the field of rendering realistic digital humans and accelerate the hardware and software development in the same field. A main objective for this workshop is to bring researchers potential collaboration opportunities. It will also provide a good introduction for researchers interested in the field.
 
             <br><br>
           </div>
