--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ After a successful first edition, we are excited to present a second edition of 
             <table class="tg">
               <tr>
                 <td>Paper submission deadline:</td>
-                <td><b>September 24<sup>th</sup>, 2020</b>
+                <td><b><s>September 24<sup>th</sup></s>, <span style="color:#FF0000";>October 4<sup>th</sup></span>,  2020</b>
                 </td>
               </tr>
               <tr>
