adding yajie's picture

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ After a successful first edition, we are excited to present a second edition of 
                   <a href="https://www.yajie-zhao.com/" target="_blank">
                    <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px; max-width: 150px;border-radius: 50%;"
-                           src="img/tbd.png" alt=""> 
+                           src="img/yajie.jpg" alt=""> 
 					
                  </div></td>
                 <td><b>Yajie Zhao</b><br/>
